--- a/TobotApp/src/main/res/values-en-rGB/strings.xml
+++ b/TobotApp/src/main/res/values-en-rGB/strings.xml
@@ -4,11 +4,11 @@
     <string name="tv_chassis_connect_tips">Please connect to the wireless network connected to the chassis first</string>
     <string name="btn_connect">Connect</string>
     <string name="tv_connect_history">Connect history</string>
-    <string name="delete_success">Delete success…</string>
-    <string name="ip_empty_tips">IP cannot be empty…</string>
+    <string name="delete_success">Delete success</string>
+    <string name="ip_empty_tips">IP cannot be empty</string>
     <string name="connect_ing">Connecting…</string>
     <string name="reconnect_ing">Reconnecting…</string>
-    <string name="reconnect_success">Reconnect success…</string>
+    <string name="reconnect_success">Reconnect success</string>
     <string name="tv_device_info">Device info</string>
     <string name="tv_config">Config</string>
     <string name="tv_map_list">Map list</string>
@@ -90,8 +90,8 @@
     <string name="move_recover_quality_low_tips">The current location quality is less than %1$d,the navigation cannot be normal,you are advised to manually stop.Please move the machine to a place where the feature points are obvious for relocate operation.</string>
     <string name="relocate_ing">Relocating…</string>
     <string name="relocate_ing_with_size">Relocating…\n%1$s</string>
-    <string name="relocate_success">Relocate success…</string>
-    <string name="relocate_fail">Relocate fail…</string>
+    <string name="relocate_success">Relocate success</string>
+    <string name="relocate_fail">Relocate fail</string>
     <string name="tv_map_switch_tips">Are you sure you want to load the map?The current map will be cleared after loading!</string>
     <string name="tv_map_delete_tips">Are you sure you want to delete this map?</string>
     <string name="tv_location_delete_tips">Are you sure you want to delete this location point?</string>
@@ -99,10 +99,10 @@
     <string name="btn_cancel">Cancel</string>
     <string name="btn_confirm">Confirm</string>
     <string name="set_ing">Setting…</string>
-    <string name="set_success">Set success…</string>
-    <string name="set_fail">Set fail…</string>
-    <string name="name_empty_tips">The location point name cannot be empty…</string>
-    <string name="map_name_empty_tips">The map name cannot be empty…</string>
+    <string name="set_success">Set success</string>
+    <string name="set_fail">Set fail</string>
+    <string name="name_empty_tips">The location point name cannot be empty</string>
+    <string name="map_name_empty_tips">The map name cannot be empty</string>
     <string name="tv_title_save_map">Save map</string>
     <string name="et_hint_map_tips">Input map name</string>
     <string name="et_hint_location_tips">Input point name</string>
@@ -119,41 +119,41 @@
     <string name="name_edit_rule_tips">Location point name,chinese and english name can be modified,but can not be repeated!The relocate is used to perform the positioning operation at the current position point.</string>
     <string name="map_rule_tips">Please name the map properly according to the requirements.If the saved map name is consistent with the existing map name,the saved map name will be overwritten.</string>
     <string name="load_ing">Loading…</string>
-    <string name="load_success">Load success…</string>
-    <string name="load_fail">Load fail…</string>
+    <string name="load_success">Load success</string>
+    <string name="load_fail">Load fail</string>
     <string name="clear_ing">Clearing…</string>
-    <string name="clear_success">Clear success…</string>
-    <string name="clear_fail">Clear fail…</string>
+    <string name="clear_success">Clear success</string>
+    <string name="clear_fail">Clear fail</string>
     <string name="save_ing">Saving…</string>
-    <string name="save_success">Save success…</string>
-    <string name="save_fail">Save fail…</string>
-    <string name="number_edit_fail_tips">The location point name already exists…</string>
-    <string name="name_china_edit_fail_tips">The chinese name already exists…</string>
-    <string name="name_english_edit_fail_tips">The english name already exists…</string>
-    <string name="slam_not_connect_tips">Not connected…</string>
-    <string name="net_not_connect_tips">The network is disconnected.Please connect to the network first…</string>
-    <string name="version_latest">No new version detected…</string>
+    <string name="save_success">Save success</string>
+    <string name="save_fail">Save fail</string>
+    <string name="number_edit_fail_tips">The location point name already exists</string>
+    <string name="name_china_edit_fail_tips">The chinese name already exists</string>
+    <string name="name_english_edit_fail_tips">The english name already exists</string>
+    <string name="slam_not_connect_tips">Not connected</string>
+    <string name="net_not_connect_tips">The network is disconnected.Please connect to the network first</string>
+    <string name="version_latest">No new version detected</string>
     <string name="tv_upgrade_title">New version found</string>
     <string name="tv_upgrade_tips">New version detected,update?</string>
     <string name="tv_ignore">Ignore</string>
     <string name="tv_upgrade">Update</string>
     <string name="check_ing">Checking…</string>
-    <string name="download_fail">Download fail…</string>
-    <string name="permission_sd_card_open_tips">Please open the memory card to save permissions first…</string>
+    <string name="download_fail">Download fail</string>
+    <string name="permission_sd_card_open_tips">Please open the memory card to save permissions first</string>
     <string name="tv_apk_download_begin">Start download</string>
-    <string name="tv_apk_download_tips">Downloading the TongBu drawing…</string>
-    <string name="tv_apk_content_tips">Connecting to server…</string>
+    <string name="tv_apk_download_tips">TongBu downloading…</string>
+    <string name="tv_apk_content_tips">Connecting to server</string>
     <string name="tv_apk_download_complete">Download completed,click Install</string>
-    <string name="pose_request_success_tips">Location point obtained success…</string>
-    <string name="pose_request_fail_tips">Failed to get location point,please try again later…</string>
+    <string name="pose_request_success_tips">Location point obtained success</string>
+    <string name="pose_request_fail_tips">Failed to get location point,please try again later</string>
     <string name="tv_create_task">Create task</string>
-    <string name="task_point_empty_tips">Please create a location point first…</string>
+    <string name="task_point_empty_tips">Please create a location point first</string>
     <string name="tv_create_task_title">Create task(click to select)</string>
     <string name="tv_select_all">Select all</string>
     <string name="tv_select_all_cancel">Deselect all</string>
     <string name="tv_loop_implement">Infinite cycles</string>
     <string name="btn_start_implement">Start execution</string>
-    <string name="pose_get_fail_tips">Failed to get machine attitude.Please add again…</string>
+    <string name="pose_get_fail_tips">Failed to get machine attitude.Please add again</string>
     <string name="tv_docking_true">Docker</string>
     <string name="tv_docking_false">UnDocker</string>
     <string name="tv_file_catalog">File directory:%1$s</string>
@@ -164,7 +164,7 @@
     <string name="tv_wipe_white">White</string>
     <string name="tv_wipe_grey">Grey</string>
     <string name="tv_wipe_black">Black</string>
-    <string name="point_sort_success">Sort success…</string>
+    <string name="point_sort_success">Sort success</string>
     <string name="btn_known">I know</string>
     <string name="tv_current_low_battery_tips">Min battery %1$d</string>
     <string name="log_file_out">Log file out(%1$s)</string>
@@ -175,15 +175,15 @@
     <string name="to_left">Left</string>
     <string name="to_right">Right</string>
     <string name="btn_send">Send</string>
-    <string name="rotate_speed_empty_tips">Rotate angle cannot be empty…</string>
+    <string name="rotate_speed_empty_tips">Rotate angle cannot be empty</string>
     <string name="tv_move_navigate_distance">Forward navigate</string>
     <string name="et_navigate_distance_hint_tips">Input navigate value(unit:m)</string>
-    <string name="navigate_distance_empty_tips">Navigate value cannot be empty…</string>
+    <string name="navigate_distance_empty_tips">Navigate value cannot be empty</string>
     <string name="tv_save_task">Save task</string>
     <string name="et_hint_task_tips">Input task name</string>
     <string name="tv_task_tips">Task name represents the flag of the created task,which cannot be repeated!</string>
-    <string name="task_empty_tips">Task name cannot be empty…</string>
-    <string name="task_name_exist_tips">Path name already exists…</string>
+    <string name="task_empty_tips">Task name cannot be empty</string>
+    <string name="task_name_exist_tips">Path name already exists</string>
     <string name="tv_execute_task_tips">Please confirm whether the task matches the current map(click execute,long press delete)</string>
     <string name="tv_implement_count">Number of cycles:%1$d</string>
     <string name="tv_task_point_tips">Trajectory\n%1$s</string>
@@ -195,13 +195,13 @@
     <string name="signal_2">Relatively strong</string>
     <string name="signal_3">General</string>
     <string name="slam_disconnect_tips">Chassis connection disconnects,please exit current application!(%1$s)</string>
-    <string name="operate_fail">Operate fail…</string>
+    <string name="operate_fail">Operate fail</string>
     <string name="tv_reset_charge_title">Reset charge</string>
     <string name="tv_reset_charge_tips">The steps are as follows:\n1,move the charging pile to a new position \n2,navigate or push the machine to the charging pile and it is in the charging state \n3,click "relocate",click "reset" \n4,navigate the machine out of the charging pile,and the reset is success</string>
     <string name="btn_reset">Reset</string>
     <string name="reset_not_charge_tips">please move the machine to the charging point first</string>
-    <string name="reset_success">Reset success…</string>
-    <string name="reset_fail">Reset fail…</string>
+    <string name="reset_success">Reset success</string>
+    <string name="reset_fail">Reset fail</string>
     <string name="sensor_bumper_trigger">Bumper sensor triggered</string>
     <string name="sensor_cliff_trigger">Cliff(#%1$d) sensor triggered</string>
     <string name="sensor_sonar">Sonar\n%1$s</string>
@@ -223,7 +223,7 @@
     <string name="sonar">Sonar</string>
     <string name="cliff">Cliff</string>
     <string name="bumper">Bumper</string>
-    <string name="sensor_num_not_digits_tips">Incorrect numbering format…</string>
+    <string name="sensor_num_not_digits_tips">Incorrect numbering format</string>
     <string name="set_sensor_result">Operate:%1$b</string>
     <string name="invalid">Invalid</string>
     <string name="open">Normal</string>
@@ -242,43 +242,43 @@
     <string name="tv_sensor_warning_title">Sensor warning</string>
     <string name="tv_type">Type</string>
     <string name="tv_count">Count</string>
-    <string name="control_software_version_not_match">Control board firmware failed to load,please update…</string>
+    <string name="control_software_version_not_match">Control board firmware failed to load,please update</string>
     <string name="tv_chassis_radius">Chassis radius:%1$sM</string>
     <string name="et_chassis_radius_hint">Input chassis radius(unit:m)</string>
     <string name="tv_chassis_radius_tips">Subtract the chassis radius when resetting the charging pile.</string>
-    <string name="chassis_radius_empty_tips">Chassis radius cannot be empty…</string>
+    <string name="chassis_radius_empty_tips">Chassis radius cannot be empty</string>
     <string name="btn_set">Set</string>
     <string name="tv_speed_multiplier">Speed Multiplier(Double the speed when opened)</string>
     <string name="tv_touch_count">Touch count:%1$d</string>
     <string name="et_touch_count_hint">Input touch count</string>
-    <string name="touch_count_empty_tips">Touch count cannot be empty…</string>
-    <string name="set_success_and_reenter">Set success,need reenter…</string>
+    <string name="touch_count_empty_tips">Touch count cannot be empty</string>
+    <string name="set_success_and_reenter">Set success,need reenter</string>
     <string name="tv_navigate_parameter">Run parameter</string>
     <string name="tv_relocate_quality_min">The lowest relocate quality:%1$d</string>
     <string name="et_relocate_quality_hint">Input relocate quality(1~100)</string>
     <string name="tv_relocate_quality_min_tips">During navigation,if the positioning quality is less than this value for three consecutive times,the system actively performs relocate.</string>
-    <string name="relocate_quality_empty_tips">Relocate quality cannot be empty…</string>
+    <string name="relocate_quality_empty_tips">Relocate quality cannot be empty</string>
     <string name="tv_relocate_quality_safe">Relocate the safety value:%1$d</string>
     <string name="tv_relocate_quality_safe_tips">When navigation relocate fails,if the positioning quality is higher than this value,the system considers it safe and can continue navigation.</string>
     <string name="tv_relocate_area_radius">Relocated area radius:%1$sM</string>
     <string name="et_relocate_area_radius_hint">Input relocate area radius(unit:m)</string>
     <string name="tv_relocate_area_radius_tips">When the navigation relocate is performed,the relocate is performed in the area centered on the current position point.If the value is 0,the relocate is performed globally.</string>
-    <string name="relocate_area_radius_empty_tips">The radius of the relocate area cannot be empty…</string>
+    <string name="relocate_area_radius_empty_tips">The radius of the relocate area cannot be empty</string>
     <string name="tv_charge_start_distance">Test the distance of pile when charging:%1$sM</string>
     <string name="et_charge_start_distance_hint">Input charging distance(unit:m)</string>
-    <string name="charge_distance_empty_tips">Charging distance cannot be empty…</string>
+    <string name="charge_distance_empty_tips">Charging distance cannot be empty</string>
     <string name="tv_charge_start_distance_tips">The detection distance of pile refers to the distance between lidar and pile.If the test starts 0.2 meters ahead of the charging pile and the chassis radius is 0.25 meters,the test distance is 0.45 meters(Not detected if the value is 0).</string>
     <string name="tv_charge_offset">Offset value to pile when charging:%1$sM</string>
     <string name="et_charge_offset_hint">Input Offset value(unit:m)</string>
-    <string name="charge_offset_empty_tips">Offset value cannot be empty…</string>
+    <string name="charge_offset_empty_tips">Offset value cannot be empty</string>
     <string name="tv_charge_offset_tips">When charging back to pile,if it is greater than the set offset value,it will continue to try.After a certain number of attempts,it will stop and return the result of charging failure(Not detected if the value is 0).</string>
     <string name="btn_close_sensor">Close sensor</string>
     <string name="all">All</string>
     <string name="et_area_width_hint">Input width(unit:m)</string>
     <string name="et_area_height_hint">Input height(unit:m)</string>
     <string name="tv_close_sensor_tips">After setting the sensor area at the current position point,the navigation will actively close the specified sensor when passing through the area.</string>
-    <string name="area_width_empty_tips">Width cannot be empty…</string>
-    <string name="area_height_empty_tips">Height cannot be empty…</string>
+    <string name="area_width_empty_tips">Width cannot be empty</string>
+    <string name="area_height_empty_tips">Height cannot be empty</string>
     <string name="relocate_global">Global</string>
     <string name="relocate_part">Part</string>
     <string name="tv_relocate_part_tips">Please select the area where the machine is located on the map.If the selected area is too small,it will not work.Click the "Stop" button to cancel the current operation.</string>
@@ -288,16 +288,16 @@
     <string name="delete_all_tips">Are you sure you want to delete them all?</string>
     <string name="tv_time">Time</string>
     <string name="tv_describe">Describe</string>
-    <string name="file_permission_fail_tips">File permission fail…</string>
-    <string name="pull_load_more">Pull load more…</string>
+    <string name="file_permission_fail_tips">File permission fail</string>
+    <string name="pull_load_more">Pull load more</string>
     <string name="firmware_control_board">ControlBoard</string>
     <string name="firmware_slam_module">SlamModule</string>
     <string name="firmware_download">Download</string>
     <string name="et_download_url_hint_tips">Input download url</string>
-    <string name="download_url_empty_tips">Url cannot be empty…</string>
-    <string name="url_invalid">Url invalid…</string>
-    <string name="file_exist_tips">File has exist…</string>
+    <string name="download_url_empty_tips">Url cannot be empty</string>
+    <string name="url_invalid">Url invalid</string>
+    <string name="file_exist_tips">File has exist</string>
     <string name="downloading">Downloading…</string>
-    <string name="download_finish">Download finish…</string>
+    <string name="download_finish">Download finish</string>
     <string name="pixel_width">Paint width:%1$d</string>
 </resources>
