--- a/TobotApp/src/main/res/values-zh-rTW/strings.xml
+++ b/TobotApp/src/main/res/values-zh-rTW/strings.xml
@@ -4,10 +4,10 @@
     <string name="tv_chassis_connect_tips">請先連接到底盤連接的無線網絡</string>
     <string name="btn_connect">連接</string>
     <string name="tv_connect_history">連接歷史記錄</string>
-    <string name="ip_empty_tips">ip地址不能為空…</string>
+    <string name="ip_empty_tips">ip地址不能為空</string>
     <string name="connect_ing">連接中…</string>
     <string name="reconnect_ing">重連中…</string>
-    <string name="reconnect_success">重連成功…</string>
+    <string name="reconnect_success">重連成功</string>
     <string name="tv_device_info">設備信息</string>
     <string name="tv_map_list">地圖列表</string>
     <string name="tv_low_battery">低電量</string>
@@ -72,17 +72,17 @@
     <string name="navigate_result">導航結果：%1$b</string>
     <string name="rotate_result">旋轉結果：%1$b</string>
     <string name="move_recover_quality_low_tips">當前定位質量小於%1$d，無法正常導航，建議手動停止。請將機器移動至特征點明顯的地方進行重定位操作。</string>
-    <string name="relocate_fail">重定位失敗…</string>
+    <string name="relocate_fail">重定位失敗</string>
     <string name="tv_map_switch_tips">確認要加載地圖嗎？加載後將會清除當前的地圖！</string>
     <string name="tv_map_delete_tips">確認要刪除該地圖嗎？</string>
     <string name="tv_location_delete_tips">確認要刪除該位置點嗎？</string>
     <string name="tv_clear_map_tips">確認要清除地圖嗎？</string>
     <string name="btn_confirm">確認</string>
     <string name="set_ing">設置中…</string>
-    <string name="set_success">設置成功…</string>
-    <string name="set_fail">設置失敗…</string>
-    <string name="name_empty_tips">位置點名稱不能為空…</string>
-    <string name="map_name_empty_tips">地圖名稱不能為空…</string>
+    <string name="set_success">設置成功</string>
+    <string name="set_fail">設置失敗</string>
+    <string name="name_empty_tips">位置點名稱不能為空</string>
+    <string name="map_name_empty_tips">地圖名稱不能為空</string>
     <string name="tv_title_save_map">保存地圖</string>
     <string name="et_hint_map_tips">請輸入地圖名稱</string>
     <string name="et_hint_location_tips">請輸入位置點名稱</string>
@@ -99,35 +99,35 @@
     <string name="name_edit_rule_tips">位置點名稱、中英文名稱均可修改，但不能重復！重定位用於當前位置點執行定位操作。</string>
     <string name="map_rule_tips">請按需求合理命名地圖名稱，當保存的地圖名稱與現有地圖名稱壹致時，將會覆蓋保存。</string>
     <string name="load_ing">加載中…</string>
-    <string name="load_success">加載成功…</string>
-    <string name="load_fail">加載失敗…</string>
-    <string name="clear_fail">清除失敗…</string>
-    <string name="save_fail">保存失敗…</string>
-    <string name="number_edit_fail_tips">該位置點名稱已存在，請重新命名…</string>
-    <string name="name_china_edit_fail_tips">該中文名稱已存在，請重新命名…</string>
-    <string name="name_english_edit_fail_tips">該英文名稱已存在，請重新命名…</string>
-    <string name="slam_not_connect_tips">暫未連接到底盤…</string>
-    <string name="net_not_connect_tips">網絡已斷開，請先連接到網絡…</string>
-    <string name="version_latest">未檢測到新版本…</string>
+    <string name="load_success">加載成功</string>
+    <string name="load_fail">加載失敗</string>
+    <string name="clear_fail">清除失敗</string>
+    <string name="save_fail">保存失敗</string>
+    <string name="number_edit_fail_tips">該位置點名稱已存在，請重新命名</string>
+    <string name="name_china_edit_fail_tips">該中文名稱已存在，請重新命名</string>
+    <string name="name_english_edit_fail_tips">該英文名稱已存在，請重新命名</string>
+    <string name="slam_not_connect_tips">暫未連接到底盤</string>
+    <string name="net_not_connect_tips">網絡已斷開，請先連接到網絡</string>
+    <string name="version_latest">未檢測到新版本</string>
     <string name="tv_upgrade_title">發現新版本</string>
     <string name="tv_upgrade_tips">檢測到新版本，是否更新？</string>
     <string name="check_ing">檢測中…</string>
-    <string name="download_fail">下載失敗…</string>
-    <string name="permission_sd_card_open_tips">請先打開內存卡儲存權限…</string>
+    <string name="download_fail">下載失敗</string>
+    <string name="permission_sd_card_open_tips">請先打開內存卡儲存權限</string>
     <string name="tv_apk_download_begin">開始下載</string>
     <string name="tv_apk_download_tips">瞳步建圖下載中…</string>
-    <string name="tv_apk_content_tips">正在連接服務器…</string>
+    <string name="tv_apk_content_tips">正在連接服務器</string>
     <string name="tv_apk_download_complete">下載完成，點擊安裝</string>
-    <string name="pose_request_success_tips">位置點獲取成功…</string>
-    <string name="pose_request_fail_tips">位置點獲取失敗，請稍後再試…</string>
+    <string name="pose_request_success_tips">位置點獲取成功</string>
+    <string name="pose_request_fail_tips">位置點獲取失敗，請稍後再試</string>
     <string name="tv_create_task">創建任務</string>
-    <string name="task_point_empty_tips">請先創建位置點…</string>
+    <string name="task_point_empty_tips">請先創建位置點</string>
     <string name="tv_create_task_title">創建任務（點擊選中）</string>
     <string name="tv_select_all">全選</string>
     <string name="tv_select_all_cancel">取消全選</string>
     <string name="tv_loop_implement">無限次循環</string>
     <string name="btn_start_implement">開始執行</string>
-    <string name="pose_get_fail_tips">機器姿態獲取失敗，請重新添加…</string>
+    <string name="pose_get_fail_tips">機器姿態獲取失敗，請重新添加</string>
     <string name="tv_docking_true">在充電樁</string>
     <string name="tv_docking_false">未在充電樁</string>
     <string name="tv_file_catalog">文件目錄：%1$s</string>
@@ -138,15 +138,15 @@
     <string name="et_rotate_speed_hint_tips">請輸入旋轉角度值</string>
     <string name="tv_rotate_direction">旋轉方向</string>
     <string name="btn_send">發送</string>
-    <string name="rotate_speed_empty_tips">旋轉角度值不能為空…</string>
+    <string name="rotate_speed_empty_tips">旋轉角度值不能為空</string>
     <string name="tv_move_navigate_distance">向前導航</string>
     <string name="et_navigate_distance_hint_tips">請輸入導航距離（單位：米）</string>
-    <string name="navigate_distance_empty_tips">導航距離值不能為空…</string>
+    <string name="navigate_distance_empty_tips">導航距離值不能為空</string>
     <string name="tv_save_task">保存任務</string>
     <string name="et_hint_task_tips">請輸入任務名稱</string>
     <string name="tv_task_tips">任務名稱代表所創建任務的標誌，不能重復！</string>
-    <string name="task_empty_tips">任務名稱不能為空…</string>
-    <string name="task_name_exist_tips">路徑名稱已存在，請重新命名…</string>
+    <string name="task_empty_tips">任務名稱不能為空</string>
+    <string name="task_name_exist_tips">路徑名稱已存在，請重新命名</string>
     <string name="tv_execute_task_tips">請確認任務是否匹配當前地圖（點擊執行，長按刪除）</string>
     <string name="tv_implement_count">循環次數：%1$d</string>
     <string name="tv_task_point_tips">運動軌跡\n%1$s</string>
@@ -158,11 +158,11 @@
     <string name="signal_2">較強</string>
     <string name="signal_3">壹般</string>
     <string name="slam_disconnect_tips">底盤連接斷開，請退出當前應用！(%1$s)</string>
-    <string name="operate_fail">操作失敗…</string>
+    <string name="operate_fail">操作失敗</string>
     <string name="tv_reset_charge_title">重置充電樁</string>
     <string name="tv_reset_charge_tips">步驟如下\n1、將充電樁移至新的位置\n2、將機器導航或推到充電樁上並處於充電狀態\n3、點擊“重定位”，重定位成功後點擊“重置”\n4、將機器從充電樁導航出來，即重置成功</string>
     <string name="reset_not_charge_tips">請先將機器移動至充電樁上</string>
-    <string name="reset_fail">重置失敗…</string>
+    <string name="reset_fail">重置失敗</string>
     <string name="sensor_bumper_trigger">防碰撞傳感器觸發</string>
     <string name="sensor_cliff_trigger">防跌落(#%1$d)傳感器觸發</string>
     <string name="sensor_sonar">超聲波\n%1$s</string>
@@ -180,7 +180,7 @@
     <string name="btn_open">開啟</string>
     <string name="btn_close">關閉</string>
     <string name="sonar">超聲波</string>
-    <string name="sensor_num_not_digits_tips">編號格式錯誤…</string>
+    <string name="sensor_num_not_digits_tips">編號格式錯誤</string>
     <string name="invalid">無效</string>
     <string name="error">異常</string>
     <string name="btn_upgrade">升級</string>
@@ -197,56 +197,56 @@
     <string name="tv_sensor_warning_title">傳感器觸發警告</string>
     <string name="tv_type">類型</string>
     <string name="tv_count">次數</string>
-    <string name="control_software_version_not_match">控製板固件加載失敗，請更新…</string>
+    <string name="control_software_version_not_match">控製板固件加載失敗，請更新</string>
     <string name="tv_chassis_radius">底盤半徑：%1$sM</string>
     <string name="et_chassis_radius_hint">請輸入底盤半徑(單位:米)</string>
     <string name="tv_chassis_radius_tips">當重置充電樁時需要減去底盤半徑。</string>
-    <string name="chassis_radius_empty_tips">底盤半徑不能為空…</string>
+    <string name="chassis_radius_empty_tips">底盤半徑不能為空</string>
     <string name="btn_set">設置</string>
     <string name="tv_speed_multiplier">倍速（打開後速度翻倍）</string>
     <string name="tv_touch_count">觸摸次數：%1$d</string>
     <string name="et_touch_count_hint">請輸入觸摸次數</string>
-    <string name="touch_count_empty_tips">觸摸次數不能為空…</string>
-    <string name="set_success_and_reenter">設置成功，需重新進入應用…</string>
+    <string name="touch_count_empty_tips">觸摸次數不能為空</string>
+    <string name="set_success_and_reenter">設置成功，需重新進入應用</string>
     <string name="tv_navigate_parameter">運行參數</string>
     <string name="tv_relocate_quality_min">重定位最低定位質量：%1$d</string>
     <string name="et_relocate_quality_hint">請輸入定位質量(1~100)</string>
     <string name="tv_relocate_quality_min_tips">導航過程中，當定位質量連續小於該值3次時，將會主動執行重定位操作。</string>
-    <string name="relocate_quality_empty_tips">定位質量不能為空…</string>
+    <string name="relocate_quality_empty_tips">定位質量不能為空</string>
     <string name="tv_relocate_quality_safe_tips">當導航重定位失敗時，如果定位質量高於該值時，則認為安全，可以繼續導航。</string>
     <string name="tv_relocate_area_radius">重定位區域半徑：%1$sM</string>
     <string name="et_relocate_area_radius_hint">請輸入重定位區域半徑(單位:米)</string>
     <string name="tv_relocate_area_radius_tips">當導航重定位時，以當前位置點為中心的區域內進行重定位，為0則全局重定位。</string>
-    <string name="relocate_area_radius_empty_tips">重定位區域半徑不能為空…</string>
+    <string name="relocate_area_radius_empty_tips">重定位區域半徑不能為空</string>
     <string name="tv_charge_start_distance">充電時對樁檢測距離：%1$sM</string>
     <string name="et_charge_start_distance_hint">請輸入檢測距離(單位:米)</string>
-    <string name="charge_distance_empty_tips">檢測距離不能為空…</string>
+    <string name="charge_distance_empty_tips">檢測距離不能為空</string>
     <string name="tv_charge_start_distance_tips">對樁檢測距離是指激光雷達到樁的距離。如果在充電樁前0.2米開始檢測對樁，底盤半徑為0.25米，則檢測距離為0.45米（如果值為0則不檢測）。</string>
     <string name="tv_charge_offset">充電時對樁偏移值：%1$sM</string>
     <string name="et_charge_offset_hint">請輸入對樁偏移值(單位:米)</string>
-    <string name="charge_offset_empty_tips">偏移值不能為空…</string>
+    <string name="charge_offset_empty_tips">偏移值不能為空</string>
     <string name="tv_charge_offset_tips">當充電後退對樁時，如果大於設定的偏移值時，將會繼續嘗試，嘗試一定次數後將停止，並返回充電失敗的結果（如果值為0則不檢測）。</string>
     <string name="btn_close_sensor">關閉傳感器</string>
     <string name="et_area_width_hint">請輸入寬(單位:米)</string>
     <string name="et_area_height_hint">請輸入高(單位:米)</string>
     <string name="tv_close_sensor_tips">以當前位置點設置傳感器區域後，當導航經過該區域時，將會主動關閉指定的傳感器。</string>
-    <string name="area_width_empty_tips">寬不能為空…</string>
-    <string name="area_height_empty_tips">高不能為空…</string>
+    <string name="area_width_empty_tips">寬不能為空</string>
+    <string name="area_height_empty_tips">高不能為空</string>
     <string name="tv_relocate_part_tips">請選擇機器在地圖實際位置的區域，如果選擇的區域太小則不起作用，點擊“停止”按鈕可以取消當前操作。</string>
     <string name="tv_location_load_tips">是否加載上一次的位置點坐標？（請在地圖位置未發生變化的前提下使用）</string>
     <string name="tv_sensor">傳感器</string>
     <string name="delete_all_tips">確認要全部刪除嗎？</string>
     <string name="tv_time">時間</string>
-    <string name="file_permission_fail_tips">文件管理權限獲取失敗…</string>
-    <string name="pull_load_more">上拉加載更多…</string>
+    <string name="file_permission_fail_tips">文件管理權限獲取失敗</string>
+    <string name="pull_load_more">上拉加載更多</string>
     <string name="firmware_control_board">控製板</string>
     <string name="firmware_slam_module">slam模塊</string>
     <string name="firmware_download">下載</string>
     <string name="et_download_url_hint_tips">請輸入下載網址</string>
-    <string name="download_url_empty_tips">下載網址不能為空…</string>
-    <string name="url_invalid">網址無效…</string>
-    <string name="file_exist_tips">該文件已存在…</string>
+    <string name="download_url_empty_tips">下載網址不能為空</string>
+    <string name="url_invalid">網址無效</string>
+    <string name="file_exist_tips">該文件已存在</string>
     <string name="downloading">下載中…</string>
-    <string name="download_finish">下載完成…</string>
+    <string name="download_finish">下載完成</string>
     <string name="pixel_width">畫筆寬度：%1$d</string>
 </resources>
