--- a/TobotApp/src/main/res/values/strings.xml
+++ b/TobotApp/src/main/res/values/strings.xml
@@ -23,7 +23,7 @@
     <string name="speed_medium">中速</string>
     <string name="speed_high">高速</string>
     <string name="tv_rotate_speed">旋转角速度</string>
-    <string name="tv_current_rotate_speed_tips">最大旋转角速度%.1fM/S</string>
+    <string name="tv_current_rotate_speed_tips">最大旋转角速度%.1fm/s</string>
     <string name="tv_navigate_option">导航选项</string>
     <string name="navigate_mode">导航模式</string>
     <string name="navigate_free">自由导航</string>
@@ -50,7 +50,7 @@
     <string name="tv_version_update">版本更新</string>
     <string name="tv_robot">瞳步机器人</string>
     <string name="tv_scan_follow">扫码关注微信公众号</string>
-    <string name="tv_info">电话：13371936025\n邮箱：sales@tobotai.com\n网址：www.tobotai.com\n地址：上海市奉贤区金海公路6055号临港南桥科技城29号楼506室</string>
+    <string name="tv_info">电话：13371936025\n邮箱：sales@tobotai.com\n网址：www.tobotai.com\n地址：上海市奉贤区金海公路6055号临港南桥科技城29号楼506</string>
     <string name="tv_stop">停止</string>
     <string name="tv_task">任务</string>
     <string name="tv_navigate">导航</string>
@@ -62,6 +62,8 @@
     <string name="charging_docking">-[在桩]</string>
     <string name="charging_direct">-[直充]</string>
     <string name="tv_pose_show">[%1$s,%2$s,%3$s]</string>
+    <string name="tv_pose">位置[%1$s,%2$s,%3$s]</string>
+    <string name="tv_distance">间距[%.2fm]</string>
     <string name="tv_map">地图</string>
     <string name="tv_add_point">位置点</string>
     <string name="tv_action">动作</string>
@@ -69,6 +71,7 @@
     <string name="tv_edit">编辑</string>
     <string name="tv_reset_charge">重置充电桩</string>
     <string name="tv_relocate">重定位</string>
+    <string name="tv_manual_add_location">手动加点</string>
     <string name="tv_clear_map">清除地图</string>
     <string name="tv_save_map">保存地图</string>
     <string name="tv_build_map">建图</string>
@@ -92,12 +95,12 @@
     <string name="charge_result">充电结果：%1$b</string>
     <string name="navigate_result">导航结果：%1$b</string>
     <string name="rotate_result">旋转结果：%1$b</string>
-    <string name="move_recover_quality_low_tips">当前定位质量小于%1$d，无法正常导航，建议手动停止。请将机器移动至特征点明显的地方进行重定位操作。</string>
+    <string name="move_recover_quality_low_tips">当前定位质量小于%1$d，无法正常导航，建议手动停止，请将机器移动至特征点明显的地方进行重定位操作</string>
     <string name="relocate_ing">定位中…</string>
     <string name="relocate_ing_with_size">定位中…\n%1$s</string>
     <string name="relocate_success">重定位成功</string>
     <string name="relocate_fail">重定位失败</string>
-    <string name="tv_map_switch_tips">确认要加载地图吗？加载后将会清除当前的地图！</string>
+    <string name="tv_map_switch_tips">确认要加载地图吗？加载后将会清除当前的地图</string>
     <string name="tv_map_delete_tips">确认要删除该地图吗？</string>
     <string name="tv_location_delete_tips">确认要删除该位置点吗？</string>
     <string name="tv_clear_map_tips">确认要清除地图吗？</string>
@@ -119,10 +122,10 @@
     <string name="tv_arrive_not_rotate">到点不旋转</string>
     <string name="et_relocate_area_width">重定位区域宽(单位:米)</string>
     <string name="et_relocate_area_height">重定位区域高(单位:米)</string>
-    <string name="tv_relocate_area_tips">当重定位区域宽或高为0时，则默认局部重定位。</string>
-    <string name="name_rule_tips">请按需求合理命名位置点名称，建议以数字类型命名。</string>
-    <string name="name_edit_rule_tips">位置点名称、中英文名称均可修改，但不能重复！重定位用于当前位置点执行定位操作。</string>
-    <string name="map_rule_tips">请按需求合理命名地图名称，当保存的地图名称与现有地图名称一致时，将会覆盖保存。</string>
+    <string name="tv_relocate_area_tips">当重定位区域宽或高为0时，则默认局部重定位</string>
+    <string name="name_rule_tips">请按需求合理命名位置点名称，建议以数字类型命名</string>
+    <string name="name_edit_rule_tips">位置点名称、中英文名称均可修改，但不能重复，重定位用于当前位置点执行定位操作</string>
+    <string name="map_rule_tips">请按需求合理命名地图名称，当保存的地图名称与现有地图名称一致时，将会覆盖保存</string>
     <string name="load_ing">加载中…</string>
     <string name="load_success">加载成功</string>
     <string name="load_fail">加载失败</string>
@@ -146,19 +149,18 @@
     <string name="download_fail">下载失败</string>
     <string name="permission_sd_card_open_tips">请先打开内存卡储存权限</string>
     <string name="tv_apk_download_begin">开始下载</string>
-    <string name="tv_apk_download_tips">瞳步建图下载中…</string>
+    <string name="tv_apk_download_tips">瞳步建图下载中</string>
     <string name="tv_apk_content_tips">正在连接服务器</string>
     <string name="tv_apk_download_complete">下载完成，点击安装</string>
     <string name="pose_request_success_tips">位置点获取成功</string>
     <string name="pose_request_fail_tips">位置点获取失败，请稍后再试</string>
     <string name="tv_create_task">创建任务</string>
     <string name="task_point_empty_tips">请先创建位置点</string>
-    <string name="tv_create_task_title">创建任务（点击选中）</string>
-    <string name="tv_select_all">全选</string>
-    <string name="tv_select_all_cancel">取消全选</string>
+    <string name="tv_create_task_title">创建任务（点击选择）</string>
+    <string name="btn_remove_point">移除</string>
     <string name="tv_loop_implement">无限次循环</string>
     <string name="btn_start_implement">开始执行</string>
-    <string name="pose_get_fail_tips">机器姿态获取失败，请重新添加</string>
+    <string name="pose_get_fail_tips">机器姿态获取失败</string>
     <string name="tv_charge_status_tips">%1$s %2$s</string>
     <string name="tv_docking_true">在充电桩</string>
     <string name="tv_docking_false">未在充电桩</string>
@@ -192,7 +194,7 @@
     <string name="navigate_distance_empty_tips">导航距离值不能为空</string>
     <string name="tv_save_task">保存任务</string>
     <string name="et_hint_task_tips">请输入任务名称</string>
-    <string name="tv_task_tips">任务名称代表所创建任务的标志，不能重复！</string>
+    <string name="tv_task_tips">任务名称代表所创建任务的标志，不能重复</string>
     <string name="task_empty_tips">任务名称不能为空</string>
     <string name="task_name_exist_tips">路径名称已存在，请重新命名</string>
     <string name="tv_execute_task_tips">请确认任务是否匹配当前地图（点击执行，长按删除）</string>
@@ -206,7 +208,7 @@
     <string name="signal_1">强</string>
     <string name="signal_2">较强</string>
     <string name="signal_3">一般</string>
-    <string name="slam_disconnect_tips">底盘连接断开，请退出当前应用！(%1$s)</string>
+    <string name="slam_disconnect_tips">底盘连接断开，请退出当前应用(%1$s)</string>
     <string name="operate_fail">操作失败</string>
     <string name="tv_reset_charge_title">重置充电桩</string>
     <string name="tv_reset_charge_tips">步骤如下\n1、将充电桩移至新的位置\n2、将机器导航或推到充电桩上并处于充电状态\n3、点击“重定位”，重定位成功后点击“重置”\n4、将机器从充电桩导航出来，即重置成功</string>
@@ -242,10 +244,10 @@
     <string name="error">异常</string>
     <string name="btn_upgrade">升级</string>
     <string name="tv_upgrade_file_delete_tips">确认要删除%1$s文件吗？</string>
-    <string name="tv_upgrade_file_tips">确认要升级%1$s文件吗？（升级比较耗时，请勿打断！）</string>
+    <string name="tv_upgrade_file_tips">确认要升级%1$s文件吗？（升级比较耗时，请勿打断）</string>
     <string name="upgrade_ing">升级中…</string>
-    <string name="firmware_upgrade_success_tips">升级成功！请手动重启底盘，并退出当前应用！</string>
-    <string name="firmware_upgrade_fail_tips">升级失败！请重新打开当前应用，等连接底盘后再执行升级！（失败后请多次尝试）</string>
+    <string name="firmware_upgrade_success_tips">升级成功，请手动重启底盘，并退出当前应用</string>
+    <string name="firmware_upgrade_fail_tips">升级失败，请重新打开当前应用，等连接底盘后再执行升级（失败后请多次尝试）</string>
     <string name="et_float_num_format">1234567890.</string>
     <string name="trigger_true">触发</string>
     <string name="trigger_false">无触发</string>
@@ -260,9 +262,9 @@
     <string name="task_time_limited">%1$d/%2$d</string>
     <string name="task_time_infinite">%1$d/∞</string>
     <string name="control_software_version_not_match">控制板固件加载失败，请更新</string>
-    <string name="tv_chassis_radius">底盘半径：%1$sM</string>
+    <string name="tv_chassis_radius">底盘半径：%1$sm</string>
     <string name="et_chassis_radius_hint">请输入底盘半径(单位:米)</string>
-    <string name="tv_chassis_radius_tips">当重置充电桩时需要減去底盘半径。</string>
+    <string name="tv_chassis_radius_tips">当重置充电桩时需要減去底盘半径</string>
     <string name="chassis_radius_empty_tips">底盘半径不能为空</string>
     <string name="btn_set">设置</string>
     <string name="tv_speed_multiplier">倍速（打开后速度翻倍）</string>
@@ -273,32 +275,32 @@
     <string name="tv_navigate_parameter">运行参数</string>
     <string name="tv_relocate_quality_min">重定位最低定位质量：%1$d</string>
     <string name="et_relocate_quality_hint">请输入定位质量(1~100)</string>
-    <string name="tv_relocate_quality_min_tips">导航过程中，当定位质量连续小于该值3次时，将会主动执行重定位操作。</string>
+    <string name="tv_relocate_quality_min_tips">导航过程中，当定位质量连续小于该值3次时，将会主动执行重定位操作</string>
     <string name="relocate_quality_empty_tips">定位质量不能为空</string>
     <string name="tv_relocate_quality_safe">重定位安全值：%1$d</string>
-    <string name="tv_relocate_quality_safe_tips">当导航重定位失败时，如果定位质量高于该值时，则认为安全，可以继续导航。</string>
-    <string name="tv_relocate_area_radius">重定位区域半径：%1$sM</string>
+    <string name="tv_relocate_quality_safe_tips">当导航重定位失败时，如果定位质量高于该值时，则认为安全，可以继续导航</string>
+    <string name="tv_relocate_area_radius">重定位区域半径：%1$sm</string>
     <string name="et_relocate_area_radius_hint">请输入重定位区域半径(单位:米)</string>
-    <string name="tv_relocate_area_radius_tips">当导航重定位时，以当前位置点为中心的区域内进行重定位，为0则全局重定位。</string>
+    <string name="tv_relocate_area_radius_tips">当导航重定位时，以当前位置点为中心的区域内进行重定位，为0则全局重定位</string>
     <string name="relocate_area_radius_empty_tips">重定位区域半径不能为空</string>
-    <string name="tv_charge_start_distance">充电时对桩检测距离：%1$sM</string>
+    <string name="tv_charge_start_distance">充电时对桩检测距离：%1$sm</string>
     <string name="et_charge_start_distance_hint">请输入检测距离(单位:米)</string>
     <string name="charge_distance_empty_tips">检测距离不能为空</string>
-    <string name="tv_charge_start_distance_tips">对桩检测距离是指激光雷达到桩的距离。如果在充电桩前0.2米开始检测对桩，底盘半径为0.25米，则检测距离为0.45米（如果值为0则不检测）。</string>
-    <string name="tv_charge_offset">充电时对桩偏移值：%1$sM</string>
+    <string name="tv_charge_start_distance_tips">对桩检测距离是指激光雷达到桩的距离，如果在充电桩前0.2米开始检测对桩，底盘半径为0.25米，则检测距离为0.45米（如果值为0则不检测）</string>
+    <string name="tv_charge_offset">充电时对桩偏移值：%1$sm</string>
     <string name="et_charge_offset_hint">请输入对桩偏移值(单位:米)</string>
     <string name="charge_offset_empty_tips">偏移值不能为空</string>
-    <string name="tv_charge_offset_tips">当充电后退对桩时，如果大于设定的偏移值时，将会继续尝试，尝试一定次数后将停止，并返回充电失败的结果（如果值为0则不检测）。</string>
+    <string name="tv_charge_offset_tips">当充电后退对桩时，如果大于设定的偏移值时，将会继续尝试，尝试一定次数后将停止，并返回充电失败的结果（如果值为0则不检测）</string>
     <string name="btn_close_sensor">关闭传感器</string>
     <string name="all">全部</string>
     <string name="et_area_width_hint">请输入宽(单位:米)</string>
     <string name="et_area_height_hint">请输入高(单位:米)</string>
-    <string name="tv_close_sensor_tips">以当前位置点设置传感器区域后，当导航经过该区域时，将会主动关闭指定的传感器。</string>
+    <string name="tv_close_sensor_tips">以当前位置点设置传感器区域后，当导航经过该区域时，将会主动关闭指定的传感器</string>
     <string name="area_width_empty_tips">宽不能为空</string>
     <string name="area_height_empty_tips">高不能为空</string>
     <string name="relocate_global">全局重定位</string>
     <string name="relocate_part">局部重定位</string>
-    <string name="tv_relocate_part_tips">请选择机器在地图实际位置的区域，如果选择的区域太小则不起作用，点击“停止”按钮可以取消当前操作。</string>
+    <string name="tv_relocate_part_tips">请选择机器在地图实际位置的区域，如果选择的区域太小则不起作用，点击“停止”按钮可以取消当前操作</string>
     <string name="tv_location_load_tips">是否加载上一次的位置点坐标？（请在地图位置未发生变化的前提下使用）</string>
     <string name="btn_debug">debug</string>
     <string name="tv_sensor">传感器</string>
@@ -318,6 +320,12 @@
     <string name="downloading">下载中…</string>
     <string name="download_finish">下载完成</string>
     <string name="pixel_width">画笔宽度：%1$d</string>
+    <string name="charge_point">充电桩</string>
     <string name="tv_1">1</string>
     <string name="tv_2">2</string>
+    <string name="tv_location">位置</string>
+    <string name="tv_turn_left">左转</string>
+    <string name="tv_turn_right">右转</string>
+    <string name="tv_p">P</string>
+    <string name="tv_r">R</string>
 </resources>
