--- a/TobotApp/src/main/res/values-en-rGB/strings.xml
+++ b/TobotApp/src/main/res/values-en-rGB/strings.xml
@@ -20,7 +20,7 @@
     <string name="speed_medium">Medium</string>
     <string name="speed_high">High</string>
     <string name="tv_rotate_speed">Rotate speed</string>
-    <string name="tv_current_rotate_speed_tips">Max speed %.1fM/S</string>
+    <string name="tv_current_rotate_speed_tips">Max speed %.1fm/s</string>
     <string name="tv_navigate_option">Navigate option</string>
     <string name="navigate_mode">Navigate mode</string>
     <string name="navigate_free">Free</string>
@@ -47,7 +47,7 @@
     <string name="tv_version_update">Version update</string>
     <string name="tv_robot">TongBu robot</string>
     <string name="tv_scan_follow">WeChat scan</string>
-    <string name="tv_info">Tel:13371936025\nEmail:sales@tobotai.com\nWebsite:www.tobotai.com\nAddress:Room 506,Building 29,Lingang South Bridge Science and Technology City,6055 Jinhai Road,Fengxian District,Shanghai</string>
+    <string name="tv_info">Tel:13371936025\nEmail:sales@tobotai.com\nWebsite:www.tobotai.com\nAddress:506,Building 29,Lingang South Bridge Science and Technology City,6055 Jinhai Road,Fengxian District,Shanghai</string>
     <string name="tv_stop">Stop</string>
     <string name="tv_task">Task</string>
     <string name="tv_navigate">Navigate</string>
@@ -58,13 +58,16 @@
     <string name="tv_charge_false">Uncharged</string>
     <string name="charging_docking">-[Docker]</string>
     <string name="charging_direct">-[Direct]</string>
+    <string name="tv_pose">Pose[%1$s,%2$s,%3$s]</string>
+    <string name="tv_distance">Distance[%.2fm]</string>
     <string name="tv_map">Map</string>
-    <string name="tv_add_point">Position point</string>
+    <string name="tv_add_point">Position</string>
     <string name="tv_action">Action</string>
     <string name="tv_go_charge">Charge</string>
     <string name="tv_edit">Edit</string>
     <string name="tv_reset_charge">Reset charge</string>
     <string name="tv_relocate">Relocate</string>
+    <string name="tv_manual_add_location">Manual position</string>
     <string name="tv_clear_map">Clear map</string>
     <string name="tv_save_map">Save map</string>
     <string name="tv_build_map">Mapping</string>
@@ -87,12 +90,12 @@
     <string name="charge_result">Charge result:%1$b</string>
     <string name="navigate_result">Navigate result:%1$b</string>
     <string name="rotate_result">Rotate result:%1$b</string>
-    <string name="move_recover_quality_low_tips">The current location quality is less than %1$d,the navigation cannot be normal,you are advised to manually stop.Please move the machine to a place where the feature points are obvious for relocate operation.</string>
+    <string name="move_recover_quality_low_tips">The current location quality is less than %1$d,the navigation cannot be normal,you are advised to manually stop,Please move the machine to a place where the feature points are obvious for relocate operation</string>
     <string name="relocate_ing">Relocating…</string>
     <string name="relocate_ing_with_size">Relocating…\n%1$s</string>
     <string name="relocate_success">Relocate success</string>
     <string name="relocate_fail">Relocate fail</string>
-    <string name="tv_map_switch_tips">Are you sure you want to load the map?The current map will be cleared after loading!</string>
+    <string name="tv_map_switch_tips">Are you sure you want to load the map?The current map will be cleared after loading</string>
     <string name="tv_map_delete_tips">Are you sure you want to delete this map?</string>
     <string name="tv_location_delete_tips">Are you sure you want to delete this location point?</string>
     <string name="tv_clear_map_tips">Are you sure you want to clear the map?</string>
@@ -114,10 +117,10 @@
     <string name="tv_arrive_not_rotate">UnRotate</string>
     <string name="et_relocate_area_width">Relocate area width(unit:m)</string>
     <string name="et_relocate_area_height">Relocate area height(unit:m)</string>
-    <string name="tv_relocate_area_tips">If the relocate area width or height is 0,local relocate is performed by default.</string>
-    <string name="name_rule_tips">Please name the locations and points appropriately according to the requirements.It is suggested to name them after the number type.</string>
-    <string name="name_edit_rule_tips">Location point name,chinese and english name can be modified,but can not be repeated!The relocate is used to perform the positioning operation at the current position point.</string>
-    <string name="map_rule_tips">Please name the map properly according to the requirements.If the saved map name is consistent with the existing map name,the saved map name will be overwritten.</string>
+    <string name="tv_relocate_area_tips">If the relocate area width or height is 0,local relocate is performed by default</string>
+    <string name="name_rule_tips">Please name the locations and points appropriately according to the requirements,It is suggested to name them after the number type</string>
+    <string name="name_edit_rule_tips">Location point name,chinese and english name can be modified,but can not be repeated,The relocate is used to perform the positioning operation at the current position point</string>
+    <string name="map_rule_tips">Please name the map properly according to the requirements,If the saved map name is consistent with the existing map name,the saved map name will be overwritten</string>
     <string name="load_ing">Loading…</string>
     <string name="load_success">Load success</string>
     <string name="load_fail">Load fail</string>
@@ -131,7 +134,7 @@
     <string name="name_china_edit_fail_tips">The chinese name already exists</string>
     <string name="name_english_edit_fail_tips">The english name already exists</string>
     <string name="slam_not_connect_tips">Not connected</string>
-    <string name="net_not_connect_tips">The network is disconnected.Please connect to the network first</string>
+    <string name="net_not_connect_tips">The network is disconnected,Please connect to the network first</string>
     <string name="version_latest">No new version detected</string>
     <string name="tv_upgrade_title">New version found</string>
     <string name="tv_upgrade_tips">New version detected,update?</string>
@@ -141,7 +144,7 @@
     <string name="download_fail">Download fail</string>
     <string name="permission_sd_card_open_tips">Please open the memory card to save permissions first</string>
     <string name="tv_apk_download_begin">Start download</string>
-    <string name="tv_apk_download_tips">TongBu downloading…</string>
+    <string name="tv_apk_download_tips">TongBu downloading</string>
     <string name="tv_apk_content_tips">Connecting to server</string>
     <string name="tv_apk_download_complete">Download completed,click Install</string>
     <string name="pose_request_success_tips">Location point obtained success</string>
@@ -149,11 +152,10 @@
     <string name="tv_create_task">Create task</string>
     <string name="task_point_empty_tips">Please create a location point first</string>
     <string name="tv_create_task_title">Create task(click to select)</string>
-    <string name="tv_select_all">Select all</string>
-    <string name="tv_select_all_cancel">Deselect all</string>
+    <string name="btn_remove_point">Remove</string>
     <string name="tv_loop_implement">Infinite cycles</string>
     <string name="btn_start_implement">Start execution</string>
-    <string name="pose_get_fail_tips">Failed to get machine attitude.Please add again</string>
+    <string name="pose_get_fail_tips">Failed to get pose</string>
     <string name="tv_docking_true">Docker</string>
     <string name="tv_docking_false">UnDocker</string>
     <string name="tv_file_catalog">File directory:%1$s</string>
@@ -181,7 +183,7 @@
     <string name="navigate_distance_empty_tips">Navigate value cannot be empty</string>
     <string name="tv_save_task">Save task</string>
     <string name="et_hint_task_tips">Input task name</string>
-    <string name="tv_task_tips">Task name represents the flag of the created task,which cannot be repeated!</string>
+    <string name="tv_task_tips">Task name represents the flag of the created task,which cannot be repeated</string>
     <string name="task_empty_tips">Task name cannot be empty</string>
     <string name="task_name_exist_tips">Path name already exists</string>
     <string name="tv_execute_task_tips">Please confirm whether the task matches the current map(click execute,long press delete)</string>
@@ -194,7 +196,7 @@
     <string name="signal_1">Strong</string>
     <string name="signal_2">Relatively strong</string>
     <string name="signal_3">General</string>
-    <string name="slam_disconnect_tips">Chassis connection disconnects,please exit current application!(%1$s)</string>
+    <string name="slam_disconnect_tips">Chassis connection disconnects,please exit current application(%1$s)</string>
     <string name="operate_fail">Operate fail</string>
     <string name="tv_reset_charge_title">Reset charge</string>
     <string name="tv_reset_charge_tips">The steps are as follows:\n1,move the charging pile to a new position \n2,navigate or push the machine to the charging pile and it is in the charging state \n3,click "relocate",click "reset" \n4,navigate the machine out of the charging pile,and the reset is success</string>
@@ -230,10 +232,10 @@
     <string name="error">Error</string>
     <string name="btn_upgrade">Upgrade</string>
     <string name="tv_upgrade_file_delete_tips">Are you sure you want to delete the %1$s file?</string>
-    <string name="tv_upgrade_file_tips">Are you sure you want to upgrade the %1$s file?(Upgrade is time consuming,please do not interrupt!)</string>
+    <string name="tv_upgrade_file_tips">Are you sure you want to upgrade the %1$s file?(Upgrade is time consuming,please do not interrupt)</string>
     <string name="upgrade_ing">Upgrading…</string>
-    <string name="firmware_upgrade_success_tips">Upgrade success!Please manually restart the chassis and exit the current application!</string>
-    <string name="firmware_upgrade_fail_tips">Upgrade fail!Please reopen the current application and wait to connect the chassis before performing the upgrade!(If you fail,try many times.)</string>
+    <string name="firmware_upgrade_success_tips">Upgrade success,Please manually restart the chassis and exit the current application</string>
+    <string name="firmware_upgrade_fail_tips">Upgrade fail,Please reopen the current application and wait to connect the chassis before performing the upgrade(If you fail,try many times)</string>
     <string name="trigger_true">Trigger</string>
     <string name="trigger_false">UnTrigger</string>
     <string name="tv_query_frequency">Query frequency</string>
@@ -243,9 +245,9 @@
     <string name="tv_type">Type</string>
     <string name="tv_count">Count</string>
     <string name="control_software_version_not_match">Control board firmware failed to load,please update</string>
-    <string name="tv_chassis_radius">Chassis radius:%1$sM</string>
+    <string name="tv_chassis_radius">Chassis radius:%1$sm</string>
     <string name="et_chassis_radius_hint">Input chassis radius(unit:m)</string>
-    <string name="tv_chassis_radius_tips">Subtract the chassis radius when resetting the charging pile.</string>
+    <string name="tv_chassis_radius_tips">Subtract the chassis radius when resetting the charging pile</string>
     <string name="chassis_radius_empty_tips">Chassis radius cannot be empty</string>
     <string name="btn_set">Set</string>
     <string name="tv_speed_multiplier">Speed Multiplier(Double the speed when opened)</string>
@@ -254,34 +256,34 @@
     <string name="touch_count_empty_tips">Touch count cannot be empty</string>
     <string name="set_success_and_reenter">Set success,need reenter</string>
     <string name="tv_navigate_parameter">Run parameter</string>
-    <string name="tv_relocate_quality_min">The lowest relocate quality:%1$d</string>
+    <string name="tv_relocate_quality_min">Lowest relocate quality:%1$d</string>
     <string name="et_relocate_quality_hint">Input relocate quality(1~100)</string>
-    <string name="tv_relocate_quality_min_tips">During navigation,if the positioning quality is less than this value for three consecutive times,the system actively performs relocate.</string>
+    <string name="tv_relocate_quality_min_tips">During navigation,if the positioning quality is less than this value for three consecutive times,the system actively performs relocate</string>
     <string name="relocate_quality_empty_tips">Relocate quality cannot be empty</string>
     <string name="tv_relocate_quality_safe">Relocate the safety value:%1$d</string>
-    <string name="tv_relocate_quality_safe_tips">When navigation relocate fails,if the positioning quality is higher than this value,the system considers it safe and can continue navigation.</string>
-    <string name="tv_relocate_area_radius">Relocated area radius:%1$sM</string>
+    <string name="tv_relocate_quality_safe_tips">When navigation relocate fails,if the positioning quality is higher than this value,the system considers it safe and can continue navigation</string>
+    <string name="tv_relocate_area_radius">Relocated area radius:%1$sm</string>
     <string name="et_relocate_area_radius_hint">Input relocate area radius(unit:m)</string>
-    <string name="tv_relocate_area_radius_tips">When the navigation relocate is performed,the relocate is performed in the area centered on the current position point.If the value is 0,the relocate is performed globally.</string>
+    <string name="tv_relocate_area_radius_tips">When the navigation relocate is performed,the relocate is performed in the area centered on the current position point,If the value is 0,the relocate is performed globally</string>
     <string name="relocate_area_radius_empty_tips">The radius of the relocate area cannot be empty</string>
-    <string name="tv_charge_start_distance">Test the distance of pile when charging:%1$sM</string>
+    <string name="tv_charge_start_distance">Charging distance to pile:%1$sm</string>
     <string name="et_charge_start_distance_hint">Input charging distance(unit:m)</string>
     <string name="charge_distance_empty_tips">Charging distance cannot be empty</string>
-    <string name="tv_charge_start_distance_tips">The detection distance of pile refers to the distance between lidar and pile.If the test starts 0.2 meters ahead of the charging pile and the chassis radius is 0.25 meters,the test distance is 0.45 meters(Not detected if the value is 0).</string>
-    <string name="tv_charge_offset">Offset value to pile when charging:%1$sM</string>
+    <string name="tv_charge_start_distance_tips">The detection distance of pile refers to the distance between lidar and pile,If the test starts 0.2 meters ahead of the charging pile and the chassis radius is 0.25 meters,the test distance is 0.45 meters(Not detected if the value is 0)</string>
+    <string name="tv_charge_offset">Charging offset to pile:%1$sm</string>
     <string name="et_charge_offset_hint">Input Offset value(unit:m)</string>
     <string name="charge_offset_empty_tips">Offset value cannot be empty</string>
-    <string name="tv_charge_offset_tips">When charging back to pile,if it is greater than the set offset value,it will continue to try.After a certain number of attempts,it will stop and return the result of charging failure(Not detected if the value is 0).</string>
+    <string name="tv_charge_offset_tips">When charging back to pile,if it is greater than the set offset value,it will continue to try,After a certain number of attempts,it will stop and return the result of charging failure(Not detected if the value is 0)</string>
     <string name="btn_close_sensor">Close sensor</string>
     <string name="all">All</string>
     <string name="et_area_width_hint">Input width(unit:m)</string>
     <string name="et_area_height_hint">Input height(unit:m)</string>
-    <string name="tv_close_sensor_tips">After setting the sensor area at the current position point,the navigation will actively close the specified sensor when passing through the area.</string>
+    <string name="tv_close_sensor_tips">After setting the sensor area at the current position point,the navigation will actively close the specified sensor when passing through the area</string>
     <string name="area_width_empty_tips">Width cannot be empty</string>
     <string name="area_height_empty_tips">Height cannot be empty</string>
     <string name="relocate_global">Global</string>
     <string name="relocate_part">Part</string>
-    <string name="tv_relocate_part_tips">Please select the area where the machine is located on the map.If the selected area is too small,it will not work.Click the "Stop" button to cancel the current operation.</string>
+    <string name="tv_relocate_part_tips">Please select the area where the machine is located on the map,If the selected area is too small,it will not work,Click the "Stop" button to cancel the current operation</string>
     <string name="tv_location_load_tips">Is the last position point coordinates loaded?(Please use it on the premise that the map position has not changed)</string>
     <string name="tv_sensor">Sensor</string>
     <string name="tv_warn">Warn</string>
@@ -300,4 +302,8 @@
     <string name="downloading">Downloading…</string>
     <string name="download_finish">Download finish</string>
     <string name="pixel_width">Paint width:%1$d</string>
+    <string name="charge_point">Charging</string>
+    <string name="tv_location">Pose</string>
+    <string name="tv_turn_left">Left</string>
+    <string name="tv_turn_right">Right</string>
 </resources>
